fix layout issue when screen size is below 800px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,11 +436,12 @@ form textarea:focus-visible {
 @media screen and (max-width: 800px) {
     .reason-columns {
         width: 100%;
+        height: auto;
     }
 
     .columns {
         width: 100%;
-        height: 450px;
+        height: auto;
     }
 
     table {
@@ -450,12 +451,6 @@ form textarea:focus-visible {
 
     td {
         padding: 0;
-    }
-
-    #info-section {
-        height: 50px;
-        position: relative;
-        bottom: 5px;
     }
 
     .socials {
@@ -474,6 +469,17 @@ form textarea:focus-visible {
     #au-image {
         width: 170%;
     }
+
+    #info-section {
+        height: auto;
+        font-size: small;
+    }
+
+    .button {
+        font-size: smaller;
+        padding: 5px;
+        display: inline-block;
+    }
 }
 
 /*smaller screen sizes from 370px and below*/
@@ -491,18 +497,8 @@ form textarea:focus-visible {
         height: auto;
     }
 
-    .reason-columns {
-        height: auto;
-    }
-
     .join-form-columns {
         width: 100%;
-    }
-
-    .button {
-        font-size: smaller;
-        padding: 5px;
-        display: inline-block;
     }
 
     #style-section {
@@ -529,8 +525,4 @@ form textarea:focus-visible {
         margin: 15px auto;
     }
 
-    #info-section {
-        height: auto;
-        font-size: smaller;
-    }
 }
